--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
   "name": "kloc",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "Get kloc for project.",
   "main": "index.js",
   "author": "Damir Mustafin <damir.mustafin@protonmail.ch>",
   "license": "MIT",
+  "bin": {
+    "kloc": "cli.js"
+  },
   "dependencies": {
     "meow": "^9.0.0"
   }
